客户信息修改

--- a/src/main/resources/templates/views/custom/user/customAdd.html
+++ b/src/main/resources/templates/views/custom/user/customAdd.html
@@ -721,7 +721,7 @@
 
         form.on('submit(custom-form-btn)', function (data) {
             var checkboxValue="";
-            $("input:checkbox[name='demandType']:checked").each(function() { // 遍历name=demandType的多选框
+            $view.find("input:checkbox[name='demandType']:checked").each(function() { // 遍历name=demandType的多选框
                 if(checkboxValue==0){
                     checkboxValue = $(this).val();
                     return true;
