--- a/src/main/resources/templates/views/custom/user/customDetail.html
+++ b/src/main/resources/templates/views/custom/user/customDetail.html
@@ -211,6 +211,56 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="layui-row layui-col-space20">
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">制卡费：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="socailCardFeed" lay-verify="decimal" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">个人所得税：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="socailIncomeTax" lay-verify="decimal" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="layui-card">
+                    <div class="layui-card-header">补缴当年社保：</div>
+                    <div class="layui-card-body">
+                        <div class="layui-row layui-col-space20">
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">社保费/资料费/服务费（元/月）：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="socailYearRelyPay" lay-verify="decimal" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">一次性补缴月（/月）：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="socailYearFillMonth" lay-verify="number" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">社保当年总费用：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="socailYearTotalCost" lay-verify="decimal" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -521,6 +571,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="layui-row layui-col-space20">
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">个人所得税：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="fundRelyIncomeTax" lay-verify="decimal" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -578,7 +638,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="layui-col-md4">
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">个人所得税：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="fundPatchIncomeTax" lay-verify="decimal" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="layui-col-md3">
                                 <div class="layui-form-item">
                                     <label class="layui-form-label">公积金代办其他补充说明：</label>
                                     <div class="layui-input-block">
@@ -594,6 +662,15 @@
                                     <label class="layui-form-label">销售人员：</label>
                                     <div class="layui-input-block">
                                         <input type="text" name="saleUserName" autocomplete="off" class="layui-input" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="layui-col-md3">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label">接待人员：</label>
+                                    <div class="layui-input-block">
+                                        <input type="text" name="receiverName" autocomplete="off" class="layui-input" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -614,6 +691,7 @@
             form = layui.form,
             custom = [[${custom}]], //客户信息
             saleUserName = [[${saleUserName}]],
+            receiverName = [[${receiverName}]],
             demandTypeList = [[${demandTypeList}]],
             $view = $('#custom-detail-page');
 
@@ -624,6 +702,7 @@
 
         function initCustomDetail() {
             custom.saleUserName = saleUserName;
+            custom.receiverName = receiverName;
             if (custom.socailRelyContractStartDate) {
                 custom.socailRelyContractDate = custom.socailRelyContractStartDate + " - " + custom.socailRelyContractEndDate;
             }
